	- bugfix/feature: themeable scrollbars
	- feature: ShowLogoutMenu option
	- bugfix: attempt to fix globally active input mode
		(focus problems with Nautilus)
	- feature: CenterMaximizedWindows option
	- bugfix: when reading \xnn sequences very next char was ignored
	- feature: DontRotateMenuPointer option (cteg, du nervst ;-))
	- bugfix: consider horiz/vert border when moving maximized windows

1.0.7: 2001-03-13
	- feature: consider horiz/vert border when maximizing (heiky, slow)
	- feature/bugfix: taught the clock applet to respect the user's
	           current locale (if compiled with I18N support)
	- feature: native support of semitransparency (gkrellm, Eterm, aterm)
	- bugfix:  respect user defined key bindings for window switching
	- bugfix:  fixed a little show stopper in themes menu
	- feature: colored mouse pointers (inspired by Oleastre)
	- feature: simple online help (powered by Marko's icehelp)
	- bugfix:  automatic resizing according to limited workarea
	- feature: advanced ESound support in icesound (Ch. W. Zuckschwerdt)
	- feature: YIFF support in icesound (Tara Malina)
	- bugfix:  heavy code cleanup in icesound (Tara Malina)
	- feature: add the theme directory to the X server's font path
		   it contains a file named fonts.dir
	- bugfix:  new URL decoder (for mailbox monitor) handling escaped
		   characters
	- bugfix:  accept Courier-IMAP's STATUS responses
	- feature: support for IMAP subfolders
	- bugfix:  documentation updates
	- bugfix:  some bright parts of menus weren't themeable (white was
		   used instead of a brighter version of the background color)
	- bugfix:  improved handling of _WIN_WORKAREA property (allows
		   applications like the GNOME panel to limit the workspace
		   available for regular applications) (inspired by Coventive)
	- feature: runonce keyword in menu, toolbar and keys files
		   (inspired by Coventive)
	- bugfix:  destruction of transient windows created dangling pointers
		   (gnomermind bug)