@@ -30,6 +30,7 @@
 	- bugfix: when reading \xnn sequences very next char was ignored
 	- feature: DontRotateMenuPointer option (cteg, du nervst ;-))
 	- bugfix: consider horiz/vert border when moving maximized windows
+	- bugfix: item selection in window listbox (focusVisible)
 
 1.0.7: 2001-03-13
 	- feature: consider horiz/vert border when maximizing (heiky, slow)
